--- a/cudaconv2/Makefile
+++ b/cudaconv2/Makefile
@@ -1,4 +1,4 @@
-SRC = conv_util.cu cudaconv2_wrap.cu filter_acts.cu img_acts.cu weight_acts.cu
+SRC = cudaconv2_wrap.cu filter_acts.cu img_acts.cu weight_acts.cu conv_util.cu 
 OBJ = $(patsubst %.cu,%.o,${SRC})
 
 NVCC_OPTS := --pre-include undef.h
@@ -8,14 +8,14 @@ INCLUDES := -I${PYTHON_INCLUDE} -I. -I./cutil
 
 all: _cudaconv2.so
 
-_cudaconv2.so: ${OBJ}
-	nvcc -shared -o $@ $^
-
-cudaconv2_wrap.cu: cudaconv2.i Makefile
+cudaconv2_wrap.cu: cudaconv2.i
 	swig -python -threads -c++ -o $@ ${INCLUDES} $<
 
-%.o : %.cu Makefile %.cuh
+%.o : %.cu 
 	nvcc -arch=sm_20 -O3 -g -c -o $@ $<  ${NVCC_OPTS} ${CXX_FLAGS} ${INCLUDES}
+
+_cudaconv2.so: ${OBJ}
+	nvcc -shared -o $@ $^
 
 clean:
 	rm -f *.o *.so
